--- a/dwr/Dockerfile
+++ b/dwr/Dockerfile
@@ -1,14 +1,13 @@
 FROM python:3.11-slim
 
-
-# setting work directory
-WORKDIR /code
-
-
 # env variables
 ENV PYTHONUNBUFFERED 1
 ENV PYTHONDONTWEITEBYTECODE 1
 
+# setting work directory
+WORKDIR /code
+
+RUN pip install --upgrade pip
 
 # install psycopg dependencies
 RUN apt-get update && apt-get install -y \
@@ -16,6 +15,9 @@ RUN apt-get update && apt-get install -y \
     libpq-dev \
     && rm -rf /var/lib/apt/lists/*
 
+
+RUN mkdir /code/dwr && mkdir /code/dwr/static && mkdir /code/dwr/media
+RUN mkdir /code/static && mkdir /code/media
 
 # install dependencies
 ADD requirements.txt .
