--- a/dwr/docker-compose.yml
+++ b/dwr/docker-compose.yml
@@ -1,16 +1,34 @@
-
 version: '3.11'
 
 
 services:
-  web:
+  dwr:
     build:
       context: .
-    command: >
-      sh -c "python manage.py migrate &&
-             gunicorn dwr.wsgi:application -b 0.0.0.0:8000"
     ports:
       - "8000:8000"
     env_file: .env
-    volumes: 
-      - .:/usr/src/app
+    volumes:
+      - static_volume:/code/static
+      - media_volume:/code/media
+    command: >
+      sh -c "python manage.py collectstatic --noinput &&
+             python manage.py migrate &&
+             gunicorn dwr.wsgi:application -b 0.0.0.0:8000"
+  nginx:
+    build:
+      dockerfile: ./Dockerfile
+      context: ./docker/nginx/
+    container_name: dwr_nginx
+    image: dwr_nginx
+    volumes:
+      - static_volume:/code/static
+      - media_volume:/code/media
+    depends_on:
+      - dwr
+    ports:
+      - "${NGINX_EXTERNAL_PORT}:80"
+
+volumes:
+  static_volume:
+  media_volume:
