--- a/dwr/.ebextensions/django.config
+++ b/dwr/.ebextensions/django.config
@@ -4,4 +4,4 @@ option_settings:
   aws:elasticbeanstalk:application:environment:
     DJANGO_SETTINGS_MODULE: dwr.settings
   aws:elasticbeanstalk:environment:proxy:staticfiles:
-    /static: core/static
+    /static: static
