docker to aws eb

--- a/!python_eb/config_python.yml
+++ b/!python_eb/config_python.yml
@@ -1,9 +1,9 @@
 branch-defaults:
   default:
-    environment: Dwr-env
+    environment: dwr-one
 ebbranch-defaults:
   default:
-    environment: Dwr-env
+    environment: dwr-one
     group_suffix: null
 environment-defaults:
   dwr-one:
@@ -13,7 +13,7 @@ global:
   application_name: dwr
   branch: null
   default_ec2_keyname: null
-  default_platform: docker
+  default_platform: Python 3.8
   default_region: eu-north-1
   include_git_submodules: true
   instance_profile: null
